frontend/test/should_pass/basic_065.grg
using basic_model_002;

rule r {
	pattern {
		x : AB;
	}
	replace {
		eval {
			x.ia = 42;
			x.ib = 42;
		}
	}
}

