frontend/test/should_fail/inh_002.grg
using inh_model_002;

rule bla {

	replace{}
}
